external-crates/move/crates/move-compiler/tests/move_check/parser/vector_literal_unclosed_args.move
module 0x42::Test {
    fun t() {
        // test missing ]
        ERROR
    }
}
